--- a/index.html
+++ b/index.html
@@ -9,21 +9,30 @@
     <h4>Registration</h4>
     <form>
         <h4>Name</h4>
+        <label for="text"></label>
         <input type="text">
-    <h4>Last Name</h4>
-    <input type="text">
-    <h4>ID</h4>
-    <input type="text">
-    <h4>BirthDay</h4>
-    <input type="date">
-    <h4>Email</h4>
-    <input type="email">
-    <h4>Password</h4>
-    <input type="password">
-    <h4>Repeat Password</h4>
-    <input type="password">
-    <br><input type="submit">
-    <input type="reset">
+        <h4>Last Name</h4>
+        <label for="text"></label>
+        <input type="text">
+        <h4>ID</h4>
+        <label for="number"></label>
+        <input type="number">
+        <h4>BirthDay</h4>
+        <label for="date"></label>
+        <input type="date">
+        <h4>Email</h4>
+        <label for="email"></label>
+        <input type="email">
+        <h4>Password</h4>
+        <label for="password"></label>
+        <input type="password">
+        <h4>Repeat Password</h4>
+        <label for="password"></label>
+        <input type="password">
+        <label for="submit"></label>
+        <br><input type="submit">
+        <label for="reset"></label>
+        <input type="reset">
     </form>
 </body>
 </html>
